<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/txt_a"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txt_a"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/txt_b"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txt_b"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/txt_res"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_answ"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtRad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/txt_rad" />

        <Switch
            android:id="@+id/sw_rad_deg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtDeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_deg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:onClick="on_btn_click"
            android:text="@string/btn_sin"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:onClick="on_btn_click"
            android:text="@string/btn_add"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:onClick="on_btn_click"
            android:text="@string/btn_sub"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:onClick="on_btn_click"
            android:text="@string/btn_cos"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_mul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:onClick="on_btn_click"
            android:text="@string/btn_mul"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:onClick="on_btn_click"
            android:text="@string/btn_div"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_tan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:onClick="on_btn_click"
            android:text="@string/btn_tan"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_pow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:onClick="on_btn_click"
            android:text="@string/btn_pow"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_sqrt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:onClick="on_btn_click"
            android:text="@string/btn_sqrt"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>